--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Motiion
+        Motion
     </title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
+
+    
 </body>
 <script src="assets/js/script.js"></script>
 </html>
