--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 <body>
 
 
-    
+    <div id="contextMenu" class="context-menu" style="display:none">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Our Mission</a></li>
+            <li><a href="#">Contact us</a></li>
+        </ul>
+    </div>
 </body>
 <script src="assets/js/script.js"></script>
+
 </html>
