--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-
+    <div class="icon-bar">
+        <a class="active" href="#"><i class="fa fa-home"></i></a> 
+        <a href="#"><i class="fa fa-search"></i></a> 
+        <a href="#"><i class="fa fa-envelope"></i></a> 
+        <a href="#"><i class="fa fa-globe"></i></a>
+        <a href="#"><i class="fa fa-trash"></i></a> 
+      </div>
 
     <div id="contextMenu" class="context-menu" style="display:none">
         <ul>
@@ -21,6 +27,7 @@
             <li><a href="#">Contact us</a></li>
         </ul>
     </div>
+
 </body>
 <script src="assets/js/script.js"></script>
 
