--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
 <body>
     <div class="icon-bar">
-        <a class="active" href="#"><i class="fa fa-home"></i></a> 
-        <a href="#"><i class="fa fa-search"></i></a> 
-        <a href="#"><i class="fa fa-envelope"></i></a> 
-        <a href="#"><i class="fa fa-globe"></i></a>
-        <a href="#"><i class="fa fa-trash"></i></a> 
+        <a title="Home" class="active" href="#"><i class="fa fa-home"></i></a> 
+        <a title="About" href="#"><i class="fa fa-search"></i></a> 
+        <a title="Our Mission" href="#"><i class="fa fa-envelope"></i></a> 
+        <a title="Contact us" href="#"><i class="fa fa-globe"></i></a>
       </div>
 
     <div id="contextMenu" class="context-menu" style="display:none">
