--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class="icon-bar">
-        <a title="Home" class="active" href="#"><i class="fa fa-home"></i></a> 
-        <a title="About" href="#"><i class="fa fa-search"></i></a> 
-        <a title="Our Mission" href="#"><i class="fa fa-envelope"></i></a> 
-        <a title="Contact us" href="#"><i class="fa fa-globe"></i></a>
+        <a title="Home" class="active" href="#"><i class='bx bx-home' ></i></a> 
+        <a title="About" href="#"><i class='bx bx-group'></i></a> 
+        <a title="Our Mission" href="#"><i class='bx bx-medal' ></i></a> 
+        <a title="Contact us" href="#"><i class='bx bx-envelope' ></i></a>
       </div>
 
     <div id="contextMenu" class="context-menu" style="display:none">
