--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
+    <header>
+        <div class="topnav" id="myTopnav">
+            <a href="#home" class="active">Linced</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="bx bx-menu"></i>
+            </a>
 
+        </div>
+
+    </header>
     <div id="contextMenu" class="context-menu" style="display:none">
         <ul>
             <li><a href="#">Home</a></li>
