--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="topnav" id="myTopnav">
-            <a href="#home" class="active">Linced</a>
+            <a href="#home" class="active">Motion</a>
             <a href="#news">News</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
