--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <div class="topnav" id="myTopnav">
             <a href="#home" class="active">Motion</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a href="#news">About</a>
+            <a href="#contact">Our Mission</a>
+            <a href="#about">Contact us</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="bx bx-menu"></i>
             </a>
