--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         Motion
     </title>
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
@@ -22,17 +23,22 @@
             </a>
 
         </div>
-
+        <div id="contextMenu" class="context-menu" style="display:none">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Our Mission</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </div>
     </header>
-    <div id="contextMenu" class="context-menu" style="display:none">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Our Mission</a></li>
-            <li><a href="#">Contact us</a></li>
-        </ul>
-    </div>
-
+    <section class="top" id="top">
+        <div class="left">
+            <h1>
+                Affordable Electricity. Safe and Secure.
+            </h1>
+        </div>
+    </section>
 </body>
 <script src="assets/js/script.js"></script>
 
