--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
         <li><a href="#">Contact us</a></li>
       </ul>
     </div>
-    
+    <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
   </header>
 </body>
 <script src="assets/js/script.js"></script>
