--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       </ul>
     </div>
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a href="#home" class="active">Motion</a>
+      <a href="#news">Our Services</a>
+      <a href="#contact">Plans</a>
+      <a href="#about">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
