--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#contact">Plans</a>
       <a href="#about">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
+        <i class="bx bx-menu"></i>
       </a>
     </div>
   </header>
