--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"> -->
 </head>
 
-<body>
+<body class="homepage">
   <header>
     <div id="contextMenu" class="context-menu" style="display:none">
       <ul>
@@ -31,6 +31,9 @@
       </a>
     </div>
   </header>
+  <div class="all" id="all">
+
+  </div>
 </body>
 <script src="assets/js/script.js"></script>
 
