--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <div class="topnav" id="myTopnav">
-      <a class="home" href="#home" class="active">Motion</a>
+      <a href="#home" class="active home">Motion</a>
       <a href="#news">Our Services</a>
       <a href="#contact">Plans</a>
       <a href="#about">Contact</a>
